[package]
name = "raft_rust"
version = "0.1.0"
authors = ["makslevental <maksim.levental@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
libmath = "0.2.1"
bincode =  "1.3.1"
lazy_static = "1.4.0"
crossbeam-utils = "0.8.3"
velcro = "0.5.3"