[package]
name = "raft_rust"
version = "0.1.0"
authors = ["makslevental <maksim.levental@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
bincode =  "1.3.1"
crossbeam-utils = "0.8.3"
velcro = "0.5.3"
crc32fast = "1.2.1"
log = "0.4.14"
simple_logger = "1.11.0"
macros = { path = "macros" }
counter = "0.5.2"